# Full_SMS

./: # Poetry-Install.bat  # Run Full SMS.bat  # Update.bat  .gitignore  .mise.toml  .readthedocs.yaml  CLAUDE.md  ChangePoint.py  Clone from GitHub.bat  ClusteringGrouping.py  Decaytrace1  Full_SMS.spec  IRF_680nm.h5  IRF_data.txt  NSIS Installer v1.1.nsi  NSIS Installer.nsi  Pipfile  README.md  Syncfolders_Database_db  auto-py-to-exe-config.json  auto-py-to-exe-mac-config.json  bitbucket-pipelines.yml  build.spec  change_point.py  compile qt qrc.txt  convert_ascii.py  dbg.py  fits_test.py  full_context.md  full_sms_win.spec  gendata5_20.txt  generate_sums.py  grouping.py  h5viewer.py  h5viewer_old.py  installer.iss  installer_v0.2.iss  installer_v1.2.1.iss  license.txt  lifetime_gui.py  (+40 more)
GaussianEMBIC/: findcps.py  generate_trace.py
bin_old/: main_app_old
clone_script/: Clone from GitHub.bat  full_sms_deploy_key
docs/: Makefile  antibunching.rst  change_point.rst  conf.py  controllers.rst  convert_pt3.rst  custom_dialogs.rst  dbg.rst  exporting.rst  file_manager.rst  generate_sums.rst  grouping.rst  hdf5_userguide.rst  index.rst  installation.rst  listattr.rst  make.bat  modules.rst  my_logger.rst  processes.rst  quick_roi_dialog.rst  requirements.txt  save_and_load.rst  selection.rst  settings_dialog.rst  signals.rst  smsh5.rst  smsh5_file_reader.rst  tcspcfit.rst  tester_hdf5.rst  thread_commands.rst  thread_tasks.rst  threads.rst  tree_model.rst  userguide.rst
examples/: compile qt qrc.txt  pyqtgraph - PlotWidget.txt  pyqtgraph - ScatterPlotItem.txt  pyqtgraph ImageView.txt
export_test/: Particle 1 levels-plot.csv  Particle 1 levels.csv  Particle 1 trace.csv  Particle 10 levels-plot.csv  Particle 10 levels.csv  Particle 10 trace.csv  Particle 100 levels-plot.csv  Particle 100 levels.csv  Particle 100 trace.csv  Particle 101 levels-plot.csv  Particle 101 levels.csv  Particle 101 trace.csv  Particle 102 levels-plot.csv  Particle 102 levels.csv  Particle 102 trace.csv  Particle 103 levels-plot.csv  Particle 103 levels.csv  Particle 103 trace.csv  Particle 104 levels-plot.csv  Particle 104 levels.csv  Particle 104 trace.csv  Particle 105 levels-plot.csv  Particle 105 levels.csv  (+290 more)
(+449 files in other folders)
