[tool.poetry]
name = "full_sms"
version = "0.2.1"
description = "Application to display and analyse single-molecule spectroscopy measurements."
authors = ["Josh <Joshua.Botha@up.ac.za>"]

[tool.poetry.dependencies]
python = ">=3.9.1, <3.10"
h5py = "^3.1.0"
scipy = "^1.5.4"
PyQt5-stubs = "^5.14.2"
PyQt5 = "5.15.1"
termcolor = "^1.1.0"
statsmodels = "^0.12.1"
pyqtgraph = "^0.11.0"
matplotlib = "^3.3.3"
h5pickle = "^0.4.2"


[tool.poetry.dev-dependencies]
numba = "^0.53.1"
progressbar2 = "^3.53.1"
jupyter = "^1.0.0"
pandas = "^1.2.4"
dfply = "^0.3.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
