[tool.poetry]
name = "full_sms"
version = "0.2.1"
description = "Application to display and analyse single-molecule spectroscopy measurements."
authors = ["Josh <Joshua.Botha@up.ac.za>"]

[tool.poetry.dependencies]
python = ">=3.8.10, <3.10"
h5py = "^3.1.0"
scipy = "^1.5.4"
PyQt5-stubs = "^5.14.2"
PyQt5 = "5.15.1"
termcolor = "^1.1.0"
statsmodels = "^0.12.1"
pyqtgraph = "^0.11.0"
matplotlib = "^3.3.3"
h5pickle = "^0.4.2"
pyarrow = "^5.0.0"


[tool.poetry.dev-dependencies]
numba = "^0.53.1"
progressbar2 = "^3.53.1"
jupyter = "^1.0.0"
pandas = "^1.2.4"
dfply = "^0.3.3"
auto-py-to-exe = "^2.10.0"
Pympler = "^0.9"
pyarrow = "^5.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
