[project]
name = "full-sms"
version = "0.1.0"
description = "Single-molecule spectroscopy data analysis application"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Biophysics Group, University of Pretoria" }
]
dependencies = [
    "dearpygui>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "h5py>=3.10.0",
    "numba>=0.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/full_sms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
